# learn_textual

./: CLAUDE.md  README.md  README_FORCEFUL_KILL.md  main.py  main_with_forceful_kill.py  pyproject.toml  simulated_worker.sh  test_forceful_kill.py  test_ipc.py
src/job_runner/backend/: consumer.py
